# domain/post/post_entity.go
@@ -23,4 +23,6 @@ type Post struct {
 	PublishedAt *time.Time     `json:"published_at"`
 	CustomFields map[string]interface{} `gorm:"serializer:json" json:"custom_fields"`
 	Taxonomies   []Taxonomy             `gorm:"many2many:post_taxonomies;" json:"taxonomies"`
+	FeatureImage string                 `gorm:"type:varchar(255)" json:"feature_image"`
 }
+
