# domain/post/post_revision_entity.go
@@ -15,4 +15,6 @@ type PostRevision struct {
 	Excerpt      string                 `gorm:"type:text" json:"excerpt"`
 	CustomFields map[string]interface{} `gorm:"serializer:json" json:"custom_fields"`
 	AuthorID     uuid.UUID              `gorm:"type:char(36);not null" json:"author_id"`
+	FeatureImage string                 `gorm:"type:varchar(255)" json:"feature_image"`
 }
+
